<resources>
    <string name="app_name">Fablix</string>
    <string name="edit_email">Enter email</string>
    <string name="edit_password">Enter password</string>
    <string name="button_login">Login</string>
    <string name="button_search">Search</string>
    <string name="edit_search">search</string>
    <string name="movieList">movie list</string>
    <string name="title_login">Login</string>
    <string name="title_main">Welcome to Fabflix</string>
    <string name="main_search">Search for movies</string>
    <string name="stuff_year">Year:</string>
    <string name="stuff_director">Director:</string>
    <string name="stuff_stars">Stars:</string>
    <string name="stuff_genres">Genres:</string>
    <string name="stuff_rating">Rating:</string>
    <string name="title_movies">Movies</string>

</resources>
